--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
+		"phpoffice/phpspreadsheet": "1.12.0",
 		"php": ">=5.3.7"
 	},
 	"suggest": {
